--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@ body{
     margin-top: 2px;
 }
 /* mobile first */
-@media screen and (max-width:650px){
     header{
         width:100%;
     height: 80px;
@@ -217,7 +216,7 @@ body{
         padding-left: 30px;
         background: #808080;;
         padding-top: 10px;
-        padding-bottom: 36px;
+        padding-bottom: 44px;
     }
     footer h1{
         font-family: 'Shrikhand', cursive;
@@ -226,10 +225,53 @@ body{
         text-decoration: none;
         color: black;
     }
+    /* tablette */
+@media screen and (min-width:560px) and (max-width:768px){
+    .food-opt{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        justify-content: space-around;
+    }
+    li{
+        width: 212px;
+        font-size: 14px;
+        white-space: nowrap;
+        margin-top: 27px;
+    }
+    .food-part h2{
+        width: 100%;
+    }
+    .footer p{
+        display: inline;
+        padding: 2em;
+        padding-right: 10px;
+        padding-bottom: 52px;
+    }
 }
-/*@media screen (min-width:651px) and (max-width:768px){
-    
-}*/
+@media screen and (min-width:769px) and (max-width:1400px){
+    .food-opt{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        justify-content: space-around;
+    }
+    li{
+        width: 212px;
+        font-size: 14px;
+        white-space: nowrap;
+        margin-top: 27px;
+    }
+    .food-part h2{
+        width: 100%;
+    }
+    .footer p{
+        display: inline;
+        padding: 2em;
+        padding-right: 10px;
+        padding-bottom: 52px;
+    }
+}
 
 
 
