--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,82 @@
 }
 body{
     width: 100%;
-    margin-left: 0px;
-    margin-top: 2px;
+    box-sizing: border-box;
+    margin: 0 auto;
 }
+/*Loader*/
+.loader {
+    display: flex;
+    justify-content: center;
+    opacity: 0.9;
+    position: fixed;
+    inset: 0;
+    height: 100vh;
+    z-index: 1;
+    background: #353535;
+    overflow: hidden;
+    font: 5vw/100vh "Roboto";
+    font-size: 4rem;
+    text-align: center;
+    color: #9356dc;
+    backface-visibility: hidden;
+    animation: stop-loader 0.5s 3s forwards;
+    transform-origin: top right;
+}
+.loader span {
+    display: inline-block;
+    text-shadow: 0 0 0 whitesmoke;
+    animation: smoky 1s 3s both;
+    }
+.loader span:nth-child(even) {
+    animation-name: smoky-mirror;
+    }
+@keyframes smoky {
+    60% {
+        text-shadow: 0 0 40px white;
+    }
+    to {
+        transform: translate3d(15rem, -8rem, 0) rotate(-40deg) skewX(70deg) scale(1.5);
+        text-shadow: 0 0 20px whitesmoke;
+        opacity: 0;
+    }
+    }
+@keyframes smoky-mirror {
+    60% {
+    text-shadow: 0 0 40px #9356dc;
+    }
+    to {
+    transform: translate3d(18rem, -8rem, 0) rotate(-40deg) skewX(-70deg) scale(2);
+    opacity: 0;
+    }
+    }
+@keyframes stop-loader {
+    to {
+        transform: scale(0);
+    }
+}
+.loader span:nth-of-type(1) {
+    animation-delay: 1.1s;
+    }
+    .loader span:nth-of-type(2) {
+    animation-delay: 1.2s;
+    }
+    .loader span:nth-of-type(3) {
+    animation-delay: 1.3s;
+    }
+    .loader span:nth-of-type(4) {
+    animation-delay: 1.4s;
+    }
+    .loader span:nth-of-type(5) {
+    animation-delay: 1.5s;
+    }
+    .loader span:nth-of-type(6) {
+    animation-delay: 1.6s;
+    }
+    .loader span:nth-of-type(7) {
+    animation-delay: 1.7s;
+    }
+
 /* mobile first */
     header{
         width:100%;
@@ -39,7 +112,7 @@ body{
         font-weight: bolder;
         margin-left: 1rem;
         margin-bottom: 1rem;
-        background: #F6F6F6;
+        background:#EAEAEA;
     }
     .info{
         display: flex;
@@ -80,6 +153,7 @@ body{
     box-shadow: 0 3px 10px darkgrey;
     transition: 100ms;
     }
+    /* main */
     main {
         display: block;
     }
@@ -151,7 +225,6 @@ body{
         padding-bottom: 4rem;
         background-color: #F7F7F7;
         display: flex;
-        justify-content: center;
         flex-wrap: wrap;
     }
     .food-part h2{
@@ -161,6 +234,7 @@ body{
     justify-content: flex-start;
     padding-right: 181px;
     padding-top: 55px;
+    width: 200px;
     }
     .card{
         display: flex;
@@ -178,7 +252,6 @@ body{
     background-color: white;
     border-radius: 1rem;
     box-shadow: 0 3px 8px darkgrey;
-
     }
     .card a{
         text-decoration: none;
@@ -258,24 +331,26 @@ body{
         padding-top: 10px;
         padding-bottom: 44px;
         height:229px;
-    }
+        }
+    .footer{
+        font-family:'Roboto';
+        }
     .footer p{
         color:white;
-        font-family:'Roboto';
-    }
+        }
     .footer p i{
         padding-right:10px;
-    }
+        }
     footer h1{
         font-family: 'Shrikhand', cursive;
         font-size:22px;
-    }
+        }
     footer a{
         text-decoration: none;
         color:white;
-    }
+        }
     /* tablette */
-@media screen and (min-width:560px) and (max-width:768px){
+@media screen and (min-width:560px) and (max-width:758px){
     .food-opt{
         display: flex;
         flex-direction: row;
@@ -298,7 +373,8 @@ body{
         padding-bottom: 52px;
     }
 }
-@media screen and (min-width:769px) and (max-width:1400px){
+/* Desktop */
+@media screen and (min-width:759px) and (max-width:1400px){
     .food-opt{
         display: flex;
         flex-direction: row;
