--- a/css/style.css
+++ b/css/style.css
@@ -25,13 +25,15 @@ body{
     animation: stop-loader 0.5s 3s forwards;
     transform-origin: top right;
 }
-.loader span {
+@keyframes stop-loader {
+    to {
+        transform: scale(0);
+    }
+}
+.loader span{
     display: inline-block;
     text-shadow: 0 0 0 whitesmoke;
     animation: smoky 1s 3s both;
-    }
-.loader span:nth-child(even) {
-    animation-name: smoky-mirror;
     }
 @keyframes smoky {
     60% {
@@ -42,6 +44,9 @@ body{
         text-shadow: 0 0 20px whitesmoke;
         opacity: 0;
     }
+        }
+.loader span:nth-child(even) {
+    animation-name: smoky-mirror;
     }
 @keyframes smoky-mirror {
     60% {
@@ -52,11 +57,6 @@ body{
     opacity: 0;
     }
     }
-@keyframes stop-loader {
-    to {
-        transform: scale(0);
-    }
-}
 .loader span:nth-of-type(1) {
     animation-delay: 1.1s;
     }
@@ -78,7 +78,6 @@ body{
     .loader span:nth-of-type(7) {
     animation-delay: 1.7s;
     }
-
 /* mobile first */
     header{
         width:100%;
@@ -86,7 +85,7 @@ body{
     display: flex;
     justify-content: center;
     box-shadow: 0 5px 10px lightgrey;
-}
+    }
     header h1{
         font-family: 'Shrikhand', cursive;
     }
@@ -195,14 +194,13 @@ body{
         transition: 0.5s;
         transform: scale(1.02);
     }
+    li i:hover{
+        color:#9356dc;
+    }
     .opt1 .opt2 .opt3{
         margin-right: 0.5rem;
         color:gray;
     }
-    li i:hover{
-        color:#9356dc;
-    }
-
     .opt1{
         padding-right: 10px;
         color: gray;
@@ -310,7 +308,6 @@ body{
     }
     .heart-classic{
         position: absolute;
-        /*fill: url(#text-fill);*/
         stroke: none;
     }
     .heart-pink{
@@ -318,10 +315,9 @@ body{
         position: relative;
     }
     .heart-pink:hover{
-        /*opacity:0;*/
-        stroke: url(#text-fill);
+        stroke: url(.text-fill);
         border:white;
-        fill: url(#text-fill);
+        fill: url(.text-fill);
         -webkit-transition: 0.5s;
         transition: 0.5s;
     }
@@ -356,23 +352,23 @@ body{
         flex-direction: row;
         width: 100%;
         justify-content: space-around;
-    }
+        }
     li{
         width: 212px;
         font-size: 14px;
         white-space: nowrap;
         margin-top: 27px;
-    }
+        }
     .food-part h2{
         width: 100%;
-    }
+        }
     .footer p{
         display: inline;
         padding: 2em;
         padding-right: 10px;
         padding-bottom: 52px;
+        }
     }
-}
 /* Desktop */
 @media screen and (min-width:759px) and (max-width:1400px){
     .food-opt{
@@ -380,27 +376,23 @@ body{
         flex-direction: row;
         width: 100%;
         justify-content: space-around;
-    }
+        }
     li{
         width: 250px;
         font-size: 14px;
         white-space: nowrap;
         margin-top: 27px;
-    }
+        }
     .food-part h2{
         width: 100%;
-    }
+        }
     .footer p{
         display: inline;
         padding: 2em;
         padding-right: 10px;
         padding-bottom: 52px;
+        }
     }
-}
-
-
-
-
 
 
 
