--- a/css/style.css
+++ b/css/style.css
@@ -346,7 +346,7 @@ body{
         color:white;
         }
     /* tablette */
-@media screen and (min-width:560px) and (max-width:758px){
+@media screen and (min-width:768px) and (max-width:999px){
     .food-opt{
         display: flex;
         flex-direction: row;
@@ -359,8 +359,13 @@ body{
         white-space: nowrap;
         margin-top: 27px;
         }
-    .food-part h2{
+    .food-part{
         width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+    .food-part h2{
+        width: 70%;
         }
     .footer p{
         display: inline;
@@ -370,7 +375,7 @@ body{
         }
     }
 /* Desktop */
-@media screen and (min-width:759px) and (max-width:1400px){
+@media screen and (min-width:1000px) and (max-width:1920px){
     .food-opt{
         display: flex;
         flex-direction: row;
